remove fixed spacing to reduce confusion between rules (#10)

--- a/src/client/druid.scss
+++ b/src/client/druid.scss
@@ -926,13 +926,11 @@ body {
 
 
     .rule {
-      height: 120px;
       margin-bottom: 10px;
 
       &:not(:first-child) {
         border-top: 1px solid $baseColor;
         padding-top: 8px;
-        height: 129px;
       }
       .summary {
         font-size: 16px;
